src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dwF1000-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-floating true\n    default-column-width { fixed 1000; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1000 × 0, bounds: 1272 × 712, states: []
size: 1000 × 1, bounds: 1272 × 712, states: [Activated]
